--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xdata-library",
+  "name": "@xdata/xdata",
   "version": "1.0.0",
   "description": "xdata library ",
   "main": "index.js",
