--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xdata/xdata",
+  "name": "@inchingorg/xdata",
   "version": "1.1.0",
   "description": "xdata library ",
   "main": "index.js",
