--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "commander": "^2.9.0",
+    "crypto-js": "^3.1.9-1",
     "hex": "^0.1.0",
     "iconv-lite": "^0.4.13"
   }
